--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "session-file-store": "^1.5.0",
     "sharp": "^0.33.4",
     "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "vue-router": "^4.4.0",
     "ws": "^8.18.0"
   }
