--- a/Front/my-vue-app/package.json
+++ b/Front/my-vue-app/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.3",
     "core-js": "^3.8.3",
     "mitt": "^3.0.1",
+    "socket.io-client": "^4.7.5",
     "vee-validate": "^4.13.2",
     "vue": "^3.2.13",
     "vue-router": "^4.4.3",
