--- a/Front/my-vue-app/package.json
+++ b/Front/my-vue-app/package.json
@@ -15,6 +15,7 @@
     "vee-validate": "^4.13.2",
     "vue": "^3.2.13",
     "vue-router": "^4.4.3",
+    "vuex": "^4.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
